# 2021_CDP_Contest_FollowMe

./: Central_Server.py  Client_1.py  Client_2.py  README.md  socket_serial.py
Control_Facility/: ELV.py  SEAT.py
FollowMe_APP/: AndroidManifest.xml  MainActivity.java  settings.gradle
FollowMe_APP/app/: build.gradle
FollowMe_APP/app/release/: app-release.apk  output-metadata.json
FollowMe_APP/gradle/wrapper/: gradle-wrapper.properties
FollowMe_Robot/RaspBerry/: FollowMe_Control.py  FollowMe_tts.py  FollwMe_Client.py  init_tts.py
FollowMe_Robot/jetson_nano/: new_car.dae
FollowMe_Robot/jetson_nano/Cartographer/: my_robot2.pgm  my_robot2.yaml
FollowMe_Robot/jetson_nano/Cartographer/cartographer_rviz/: AllFiles.cmake  build.ninja
FollowMe_Robot/jetson_nano/camera_pkg/src/: camera_node.py
FollowMe_Robot/jetson_nano/mushr/camera_pkg/: package.xml
FollowMe_Robot/jetson_nano/mushr/changemap/: CMakeLists.txt  package.xml
FollowMe_Robot/jetson_nano/mushr/imu_pkg/: CMakeLists.txt  package.xml
FollowMe_Robot/jetson_nano/mushr/mushr_base/vesc2/vesc2/: CMakeLists.txt  package.xml
FollowMe_Robot/jetson_nano/mushr/safety_pkg/: CMakeLists.txt  package.xml
FollowMe_Robot/jetson_nano/mushr/test_pkg/: avoidance_test.py  package.xml
FollowMe_Robot/jetson_nano/mushr/ultra_pkg/: CMakeLists.txt  package.xml
FollowMe_Robot/jetson_nano/mushr_pf/launch/: ParticleFilter.launch
FollowMe_Robot/jetson_nano/mushr_rhc/: map_subway.pgm  map_subway.yaml
FollowMe_Server/: Station.txt
src/: rhcnode.py
src/cp_files/: 2021_09_21_rhcnode.py  rhcnode.py.org
(+174 files in other folders)
