<?xml version="1.0"?>
<package>
  <name>vesc2</name>
  <version>0.0.1</version>
  <description>
    Metapackage for ROS interface to the Vedder VESC open source motor controller.
  </description>

  <maintainer email="rockettm@cs.washington.edu">Matthew Rockett</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vesc_ackermann2</run_depend>
  <run_depend>vesc_driver2</run_depend>
  <run_depend>vesc_main2</run_depend>
  <run_depend>vesc_msgs2</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
